--- a/externalize.dtx
+++ b/externalize.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-% Copyright (C) 2024 by Lukas Heindl <<+email+>>
+% Copyright (C) 2024 by Lukas Heindl <oss.heindl+latex@protonmail.com>
 % ---------------------------------------------------------------------------
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either version 1.3
@@ -68,7 +68,7 @@
 % \providecommand*{\url}{\texttt}
 % \GetFileInfo{externalize.dtx}
 % \title{The \textsf{externalize} package}
-% \author{Lukas Heindl \\ \url{<+email+>}}
+% \author{Lukas Heindl \\ \url{oss.heindl+latex@protonmail.com}}
 % \date{\fileversion~from \filedate}
 %
 % \maketitle
