--- a/externalize.dtx
+++ b/externalize.dtx
@@ -63,7 +63,7 @@
 %
 % \changes{v0.0.1}{2024/02/25}{Converted to DTX file}
 %
-% \DoNotIndex{\newcommand,\newenvironment}
+% \DoNotIndex{\newcommand,\newenvironment,\pgfkeys,\pgfkeysvalueof,\ProcessPgfOptions,\directlua,\AtEndDocument,\RequirePackage}
 %
 % \providecommand*{\url}{\texttt}
 % \GetFileInfo{externalize.dtx}
